tests/baselines/reference/jsFileCompilationMethodOverloadSyntax.errors.txt
a.js(2,3): error TS8017: Signature declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    class A {
      foo();
      ~~~
!!! error TS8017: Signature declarations can only be used in TypeScript files.
    }
    